--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,17 +3,17 @@ brands:
 #- name: kayafx
 #  config_file: kaya_fx.yml
 
-- name: itrader
-  config_file: itrader.yml
+#- name: itrader
+#  config_file: itrader.yml
 
 #- name: gmo
 #  config_file: gmo.yml
 
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
-#
+
 #- name: brokerxp
 #  config_file: brokerxp.yml
-#
-#- name: forex_staging
-#  config_file: forex_staging.yml
+
+- name: forex_staging
+  config_file: forex_staging.yml
