--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -14,8 +14,8 @@ brands:
 #- name: bfxinternational
 #  config_file: bfxinternational.yml
 
-- name: brokerz
-  config_file: brokerz.yml
+#- name: brokerz
+#  config_file: brokerz.yml
 
 #- name: dax-300
 #  config_file: dax-300.yml
@@ -38,8 +38,8 @@ brands:
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 
-#- name: kontofx
-#  config_file: kontofx.yml
+- name: kontofx
+  config_file: kontofx.yml
 
 #- name: libramarkets
 #  config_file: libramarkets.yml
