--- a/src/test/python/resources/config/Brands/ptbanc.yml
+++ b/src/test/python/resources/config/Brands/ptbanc.yml
@@ -1,3 +1,6 @@
 pretty_name: "PT Banc"
 url: "https://ptbanc.ptscrm.com/"
 url_ca: "https://ptbanc.com/#/"
+email_live_acc: "QATest@pandats.com"
+password_live_acc: "testingQA12"
+number_live_acc: "81870152"
