--- a/src/test/python/resources/config/Brands/brokerz.yml
+++ b/src/test/python/resources/config/Brands/brokerz.yml
@@ -2,3 +2,6 @@ pretty_name: "BrokerZ"
 url: "https://brokerz.ptscrm.com/"
 url_ca: "https://www.brokerz.com/"
 otp_secret: NDGSQF5GG4S3FG4A
+email_live_acc: "QATest@pandats.com"
+password_live_acc: "testingQA12"
+number_live_acc: "83125927"
