--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -74,8 +74,8 @@ brands:
 #- name: stox50
 #  config_file: stox50.yml
 
-- name: strattonmarkets-eu
-  config_file: strattonmarkets-eu.yml
+#- name: strattonmarkets-eu
+#  config_file: strattonmarkets-eu.yml
 
 #- name: swisscci
 #  config_file: swisscci.yml
