--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -1,10 +1,10 @@
 tests_config:
 
 ######################################### CA TESTS ##############################################
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
 #    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
@@ -16,23 +16,23 @@ tests_config:
 #    - test_verify_accounts_in_crm
 #    - test_switch_between_accounts_ca
 
-- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
-  class: TestPagesCA
-  tests:
-#    - test_main_menu_pages_loading
-    - test_graphs_loading
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
-#  class: TradingProcess
+#- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+#  class: TestPagesCA
 #  tests:
+#    - test_main_menu_pages_loading
+#    - test_graphs_loading
+#
+- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
+  class: TradingProcess
+  tests:
 #    - test_trading_process_open_position_ca    # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
 #    - test_verify_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
 #    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
 #    - test_verify_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
-#    - test_open_position_live         # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-#    - test_verify_live_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-#    - test_close_position_live      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
-#    - test_verify_live_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+    - test_open_position_live         # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_verify_live_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
+    - test_close_position_live      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
+    - test_verify_live_close_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
 #  class: PersonalDetailsUpdateTestCA
