--- a/src/test/python/resources/config/tests5.yml
+++ b/src/test/python/resources/config/tests5.yml
@@ -16,3 +16,15 @@ tests_config:
   tests:
     - test_dragon_leads
     - test_dragon_clients
+
+############################################## HELP DESK #################################################
+- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Help_Desk_Module
+  class: HelpDeskModuleTest
+  tests:
+    - test_create_ticket
+
+- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Tab_Help_Desk
+  class: TabHelpDeskTest
+  tests:
+    - test_searching_help_desk
+    - test_check_tab_help_desk
