--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -20,6 +20,7 @@ tests_config:
   class: TestPagesCA
   tests:
     - test_main_menu_pages_loading
+    - test_graphs_loading
 
 - module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
   class: TradingProcess
