--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -88,6 +88,9 @@ CRMHomePage:
 DragonPage:
   number_text: "//div[@title='Click to Call']"
   number_color_red: "//div[@title='Click to Call' and contains(@style,'color: red')]"
+DocumentsPage:
+  document_type: "(//*[contains(@id,'row_')]/td[3])[%s]"
+  apply_btn: "(//button[text()='Apply'])[3]"
 FinancialTransactionsPage:
   client_name_element:  "(//td[3]/div/a)[%s]"
   transaction_type_element : "(//*[@id='listBody']//tr/td[5])[%s]"
