--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -161,14 +161,15 @@ tests_config:
 #    - test_create_campaign
 #    - test_edit_campaign
 #    - test_delete_campaign
+#    - test_campaign_searching_by_columns
 #
 ########################################## AUTOASSIGN MODULE #############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
-  class: AutoAssignModuleTest
-  tests:
-    - test_add_auto_assign_rule_lead
-    - test_add_auto_assign_rule_client
-    - test_perform_delete_rule
+#- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
+#  class: AutoAssignModuleTest
+#  tests:
+#    - test_add_auto_assign_rule_lead
+#    - test_add_auto_assign_rule_client
+#    - test_perform_delete_rule
 #
 ########################################### CHECK MODULES ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
@@ -228,3 +229,9 @@ tests_config:
 #  tests:
 #    - test_searching_help_desk
 #    - test_check_tab_help_desk
+
+############################################## AUDIT LOGS ################################################
+- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_module.Test_Audit_Logs
+  class: AuditLogsModuleTest
+  tests:
+    - test_audit_logs_searching_by_columns
