--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -170,7 +170,7 @@ tests_config:
 #    - test_add_auto_assign_rule_lead
 #    - test_add_auto_assign_rule_client
 #    - test_perform_delete_rule
-#
+
 ########################################### CHECK MODULES ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModulesTest
@@ -231,14 +231,15 @@ tests_config:
 #    - test_check_tab_help_desk
 
 ############################################## AUDIT LOGS ################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_module.Test_Audit_Logs
-#  class: AuditLogsModuleTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_module.Test_Audit_Logs
+  class: AuditLogsModuleTest
+  tests:
 #    - test_audit_logs_searching_by_columns
+    - test_new_events_shown_in_audit_logs
 
 ############################################## GLOBAL SEARCH ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Global_Search
-  class: TestGlobalSearch
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Global_Search
+#  class: TestGlobalSearch
+#  tests:
 #    - test_global_search_leads
-    - test_global_search_tasks
+#    - test_global_search_tasks
