--- a/src/test/python/resources/config/Brands/itrader_global.yml
+++ b/src/test/python/resources/config/Brands/itrader_global.yml
@@ -1,3 +1,3 @@
 pretty_name: "iTrader Global"
 url: "https://globalitrader.ptscrm.com/"
-url_ca: "https://my-global.itrader.com/login.aspx?returnurl=%2f"
+url_ca: "https://my-global.itrader.com/signup.aspx"
