--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
@@ -14,3 +14,6 @@ brands:
 
 #- name: itrader
 #  config_file: itrader.yml
+
+- name: itrader_global
+  config_file: itrader_global.yml
