--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,8 +6,8 @@ brands:
 #- name: itrader
 #  config_file: itrader.yml
 #
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 #
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
@@ -17,3 +17,6 @@ brands:
 
 #- name: forex_staging
 #  config_file: forex_staging.yml
+
+- name: itrader_global
+  config_file: itrader_global.yml
