--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -47,8 +47,8 @@ brands:
 #- name: libramarkets
 #  config_file: libramarkets.yml
 
-- name: moneta
-  config_file: moneta.yml
+#- name: moneta
+#  config_file: moneta.yml
 
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
@@ -71,8 +71,8 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 
 #- name: solocapitlas
 #  config_file: solocapitlas.yml
