login nf brands

--- a/src/test/python/resources/config/Brands/alferatrade.yml
+++ b/src/test/python/resources/config/Brands/alferatrade.yml
@@ -1,3 +1,6 @@
 pretty_name: "Alferatrade"
 url: "https://alferatrade.ptscrm.com/"
 url_ca: "https://alferatrade.com/"
+email_live_acc: "QATest@pandats.com"
+password_live_acc: "testingQA12"
+number_live_acc: "32342"
