--- a/src/test/python/resources/config/Brands/tradenero.yml
+++ b/src/test/python/resources/config/Brands/tradenero.yml
@@ -2,3 +2,6 @@ pretty_name: "TradeNero"
 url: "https://tradenero.ptscrm.com/"
 url_ca: "https://www.tradenero.com/#/"
 otp_secret: ZPNZF3M6EUO3FWV5
+email_live_acc: "QATest@pandats.com"
+password_live_acc: "testingQA12"
+number_live_acc: "32342"
