--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -15,6 +15,7 @@ CALoginPage:
   citizenship: "//custom-select[@name='citizenship']//span[text()='%s']"
   submit_btn: "//button[contains (text(), 'Submit')]"
   login_email_input: "//input[@name='login']"
+  login_password_input: "//input[@id='forex-password']"
   login_btn_2: "//button[@class = 'forex-button-pandats login-button-pandats'][contains(text(), 'Login')]"
   input_first_name: "//input[@name = 'firstName']"
   input_last_name: "//input[@name = 'lastName']"
