--- a/src/test/python/resources/config/Brands/q8.yml
+++ b/src/test/python/resources/config/Brands/q8.yml
@@ -1,3 +1,7 @@
 pretty_name: "Q8 Trade"
 url: "https://q8trade.ptscrm.com/"
 url_ca: "https://www.q8trade.com/"
+url_ca_2: "https://www.q8trade.com/en"
+email_live_acc: "QATest@pandats.com"
+password_live_acc: "testingQA12"
+number_live_acc: "32342"
