login of brands

--- a/src/test/python/resources/config/Brands/kaya_fx.yml
+++ b/src/test/python/resources/config/Brands/kaya_fx.yml
@@ -2,3 +2,6 @@ pretty_name: "Kaya FX"
 url: "https://kayafx.ptscrm.com/"
 url_ca: "https://my.kayafx.com/"
 otp_secret: TYP45DNKQL6JGIJX
+email_live_acc: "QATest@pandats.com"
+password_live_acc: "testingQA12"
+number_live_acc: "32342"
