--- a/src/test/python/resources/config/Brands/coin-bits.yml
+++ b/src/test/python/resources/config/Brands/coin-bits.yml
@@ -1,2 +1,6 @@
 pretty_name: "Coin-bits"
 url: "https://coin-bits.ptscrm.com/"
+url_ca: "https://www.coin-bits.com/#/"
+email_live_acc: "QATest@pandats.com"
+password_live_acc: "testingQA12"
+number_live_acc: "32342"
