--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -12,6 +12,7 @@ CALoginPage:
   sign_up: "//button[contains(text(), 'Sign Up')]"
   check_box_accept: "//span[contains (text(), 'Terms and Conditions')]"
   login_btn: "//button[contains(text(), 'Login')]"
+  client_title_name: "//span[contains(text(), '%s')]"
   citizenship: "//custom-select[@name='citizenship']//span[text()='%s']"
   submit_btn: "//button[contains (text(), 'Submit')]"
   login_email_input: "//input[@name='login']"
