--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -104,5 +104,11 @@ brands:
 #- name: uprofx
 #  config_file: uprofx.yml
 
-- name: 24option
-  config_file: 24option.yml
+#- name: 24option
+#  config_file: 24option.yml
+
+#- name: etfinance
+#  config_file: etfinance.yml
+
+- name: coin-bits
+  config_file: coin-bits.yml
