--- a/src/test/python/resources/config/Brands/24option.yml
+++ b/src/test/python/resources/config/Brands/24option.yml
@@ -1,6 +1,6 @@
 pretty_name: "24option"
 url: ""
-url_ca: "https://www.24optio.com/"
+url_ca: "https://www.24option.com/"
 email_live_acc: "karina.onishchenko+196@pandats.com"
 password_live_acc: "ZTp364Hd"
 number_live_acc: "32342"
