--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -4,7 +4,7 @@ brands:
 
 #- name: alferatrade
 #  config_file: alferatrade.yml
-#
+
 #- name: any1profit
 #  config_file: any1profit.yml
 
@@ -25,7 +25,7 @@ brands:
 
 #- name: ctxprime
 #  config_file: ctxprime.yml
-#
+
 #- name: dax-300
 #  config_file: dax-300.yml
 
@@ -43,33 +43,33 @@ brands:
 
 #- name: grandefex
 #  config_file: grandefex.yml
-#
+
 #- name: gtstox
 #  config_file: gtstox.yml
-#
+
 #- name: hizlifx
 #  config_file: hizlifx.yml
-#
+
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
-#
+
 #- name: kontofx
 #  config_file: kontofx.yml
-#
+
 #- name: libramarkets
 #  config_file: libramarkets.yml
 
 #- name: marketrip
 #  config_file: marketrip.yml
-#
+
 #- name: moneta
 #  config_file: moneta.yml
-#
+
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
-#
-#- name: newforexstage2
-#  config_file: newforexstage2.yml
+
+- name: newforexstage2
+  config_file: newforexstage2.yml
 #
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
@@ -125,5 +125,5 @@ brands:
 #- name: uprofx
 #  config_file: uprofx.yml
 
-- name: 24option
-  config_file: 24option.yml
+#- name: 24option
+#  config_file: 24option.yml
