--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -8,8 +8,8 @@ brands:
 #- name: any1profit
 #  config_file: any1profit.yml
 
-#- name: aztrades
-#  config_file: aztrades.yml
+- name: aztrades
+  config_file: aztrades.yml
 
 #- name: bfxinternational
 #  config_file: bfxinternational.yml
@@ -68,9 +68,9 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
-#
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
+
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
 #
