--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -1,17 +1,17 @@
 tests_config:
 
 ################################### CONVERT LEAD ##########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
-#    - test_convert_lead_new_ui   # Creates a lead and converts it to a client
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_convert_lead_new_ui   # Creates a lead and converts it to a client
 
 ####################################### MT4 ACTIONS ###########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_open_trading_account_new_ui  # open demo trading account
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_open_trading_account_new_ui  # open demo trading account
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
 #  class: DepositTestCRM
@@ -38,8 +38,8 @@ tests_config:
 #  tests:
 #    - test_transfer_between_ta_new_ui # preconditions: convert lead, deposit crm
 
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
-    - test_registred_client_in_crm_new_ui
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_registred_client_in_crm_new_ui
