add ca deposit page test

--- a/src/main/python/ui/crm/model/BrandsXpath/24option_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/24option_xpath.yml
@@ -1,3 +1,6 @@
+# ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
+CADepositPage:
+  deposit_page: "//li[@data-groups='Creditcard Mostused']"
 CALoginPage:
   login_btn: "//span[contains(text(), 'Login')]"
   login_email_input: "//*[@id='Username']"
