--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -10,7 +10,8 @@ AffiliatePage:
   trash_button: "//span[@class = 'glyphicon glyphicon-trash cursor-pointer ng-star-inserted']"
 CADepositPage:
   deposit_btn: "//button[contains(text(),'Deposit')]"
-  deposit_page: "//div[@class='header-pandats']/h1[text()='Payment Details']"
+  deposit_page: "//a[@id='learnmore_CreditCard']//following-sibling::a[@title='Click to Deposit' and contains(@href,'')]"
+  deposit_iframe: "//div[@class='body-pandats']/iframe[@id='depositFrame']"
 CALoginPage:
   sign_up: "//button[contains(text(), 'Sign Up')]"
   check_box_accept: "//span[contains (text(), 'Terms and Conditions')]"
